syntax = "proto3";

option csharp_namespace = "DiscountGRPC";

service DiscountProtoService{

    rpc GetDiscount (GetDiscountRequest) returns (CouponModel);
    rpc CreateDiscount (CreateDiscountRequest) returns (CouponModel);
    rpc UpdateDiscount (UpdateDiscountRequest) returns (CouponModel);
    rpc DeleteDiscount (DeleteDiscountRequest) returns (DeleteDiscpountResponse);
}

message GetDiscountRequest{
    string ProductName = 1;
}

message CouponModel{
    int32 id = 1;
    string productName = 2;
    string description = 3;
    int32 amount = 4;
}
message CreateDiscountRequest
{
    CouponModel coupon= 1;    
}

message UpdateDiscountRequest
{
    CouponModel coupon= 1;
}

message DeleteDiscountRequest
{
    string ProductName =1;
}
message DeleteDiscpountResponse
{
    bool Success = 1;
}